syntax = "proto3";
option go_package = "./";
package com.coralogixapis.logs2metrics.v2;
import "google/protobuf/descriptor.proto";
import "com/coralogixapis/logs2metrics/v2/logs_query.proto";

message L2M {
  string id = 1;
  string name = 2;
  string description = 3;
  LogsQuery query = 5;
  string create_time = 8;
  string update_time = 9;
  L2MPermutations permutations = 10;
  repeated MetricLabel metric_labels = 12;
  repeated MetricField metric_fields = 13;
}

message L2MPermutations {
  int32 limit = 1;
  bool has_exceeded_limit = 2;
}

message MetricLabel {
  string target_label = 1;
  string source_field = 2;
}


message MetricField {
  string target_base_metric_name = 1;
  string source_field = 2;
}


